@@ -2,10 +2,10 @@ package org.helal_anwar;
 import java.io.IOException;
 import java.io.InputStreamReader;
 import java.net.HttpURLConnection;
+import java.net.URI;
+import java.net.URISyntaxException;
 import java.net.URL;
 import java.util.*;
-
-import org.apache.commons.text.StringEscapeUtils;
 import org.json.*;
 
 public class QuizService {
@@ -17,25 +17,29 @@ public class QuizService {
 
         for (int i = 0; i < results.length(); i++) {
             JSONObject q = results.getJSONObject(i);
-            String question = StringEscapeUtils.unescapeHtml4(q.getString("question"));
-            String correct = StringEscapeUtils.unescapeHtml4(q.getString("correct_answer"));
+            String questionText = org.apache.commons.text.StringEscapeUtils.unescapeHtml4(q.getString("question"));
+            String correct = org.apache.commons.text.StringEscapeUtils.unescapeHtml4(q.getString("correct_answer"));
             JSONArray incorrect = q.getJSONArray("incorrect_answers");
 
             List<String> options = new ArrayList<>();
             for (int j = 0; j < incorrect.length(); j++) {
-                options.add(StringEscapeUtils.unescapeHtml4(incorrect.getString(j)));
+                options.add(org.apache.commons.text.StringEscapeUtils.unescapeHtml4(incorrect.getString(j)));
             }
-            options.add(correct);
+
+            List<String> correctAnswers = new ArrayList<>();
+            correctAnswers.add(correct);
+
+            options.addAll(correctAnswers);
             Collections.shuffle(options);
 
-            questions.add(new Question(question, correct, options));
+            questions.add(new Question(questionText, correctAnswers, options));
         }
 
         return questions;
     }
 
-    private static JSONArray getObjects() throws IOException {
-        URL url = new URL("https://opentdb.com/api.php?amount=10&type=multiple");
+    private static JSONArray getObjects() throws URISyntaxException, IOException {
+        URL url = new URI("https://opentdb.com/api.php?amount=10&type=multiple").toURL();
         HttpURLConnection conn = (HttpURLConnection) url.openConnection();
         conn.setRequestMethod("GET");
 
